src/styles/components/contest-tile.scss
@import "../variables";

// --------------------------------------------------
// Contest Tile Component
// --------------------------------------------------

// CSS rule order
// --------------------

// 1. Variables
// 2. Box model properties
// 3. Display and position
// 4. Background
// 5. Border
// 6. Box shadow
// 7. Text
// 8. Transforms
// 9. Other

$contest-tile__logo-container-width: 90px;
$contest-tile__border: 1px solid rgba($color__white, 0.4);
$contest-tile__background: linear-gradient(
  180deg,
  rgba($color__white, 0.1) 0%,
  rgba($color__white, 0.05) 100%
);
$contest-amount__background: linear-gradient(
  45deg,
  rgba($color__white, 0.1) 0%,
  rgba($color__white, 0.05) 100%
);

$contest-tile--solid__border: 1px solid $color__n-60;
$contest-tile--solid__background: $color__n-90;

.contest-tile {
  margin-bottom: $spacing__m;
  display: flex;
  flex-direction: column;
  background: $contest-tile__background;
  border: $contest-tile__border;
  border-radius: $border-radius__m;

  @include breakpoint("s") {
    margin-bottom: $spacing__l;
  }
}

.contest-tile__top {
  display: flex;
  flex-direction: column-reverse;
  padding: 0;
  @include breakpoint("s") {
    padding: $spacing__m $spacing__l;
    flex-direction: row;
    justify-content: space-between;
  }
}

.contest-tile__logo-details-wrapper {
  display: flex;
}

// Contest amount
// --------------------

.contest-tile__amount {
  padding: $spacing__s $spacing__m;
  background: $contest-amount__background;
  border-bottom: $contest-tile__border;
  color: $color__white;
  font-weight: 500;
  text-align: right;
  font-size: $headline-font-size__xxs;

  @include breakpoint("s") {
    font-size: $headline-font-size__xs;
    padding: $spacing__xs 0 $spacing__m $spacing__m;
    justify-content: flex-start;
    background: none;
    border-bottom: none;
  }
}

// Logo area
// --------------------

.contest-tile__logo {
  width: calc($contest-tile__logo-container-width * 0.7);
  margin-right: $spacing__m;
  @include breakpoint("s") {
    flex-shrink: 0;
    padding: 0;
    width: $contest-tile__logo-container-width;
  }
}

.contest-tile__logo .project-link {
  width: calc($contest-tile__logo-container-width * 0.7);
  @include breakpoint("s") {
    width: $contest-tile__logo-container-width;
  }
}

// Content area
// --------------------

.contest-tile__content {
  display: flex;
  padding: $spacing__m;
  @include breakpoint("s") {
    padding: 0;
    max-width: 40rem;
  }
}

// Contest title
// --------------------

.contest-tile__title {
  font-size: $headline-font-size__xxs;
  font-weight: 500;
  margin-top: 0;

  @include breakpoint("s") {
    font-size: $headline-font-size__xs;
  }
}

// Contest time
// --------------------

.contest-tile__time-wrapper {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  margin: $spacing__xs 0;
  font-size: $font-size__small;

  // @include breakpoint("xs") {
  //   flex-direction: row;
  //   align-items: center;
  // }
}

.contest-tile__days-duration {
  margin-right: $spacing__s;

  &::after {
    content: "";
    @include breakpoint("xs") {
      content: "❯";
      margin-left: $spacing__s;
    }
  }
}

.contest-tile__countdown {
  padding-left: $spacing__m;
  display: flex;
  align-items: center;
  justify-content: center;
  border-left: $contest-tile__border;
  font-size: $font-size__text;

  .countdown {
    padding: 1px $spacing__m;
    margin: 0 $spacing__s;
    border-radius: 1rem;
    font-family: monospace;
    font-weight: normal;

    background: rgba(0, 0, 0, 0.1);
  }
  .countdown-live {
    display: none;
  }
}

// Contest buttons and live indicator
// --------------------

.contest-tile__bottom {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  border-top: $contest-tile__border;
  @include breakpoint("m") {
    flex-direction: row;
  }
}

.contest-tile__button-wrapper {
  width: 100%;
  display: flex;
  justify-content: center;

  @include breakpoint("m") {
    width: auto;
    justify-content: center;
  }

  a {
    width: 33%;
    padding: $spacing__s $spacing__m;
    color: $color__white;
    text-align: center;
    border-left: $contest-tile__border;

    @include breakpoint("m") {
      width: auto;
    }
    &:hover {
      background: rgba($color__white, 0.1);
    }
    &:first-of-type {
      border-left: 0;
      @include breakpoint("m") {
        border-left: $contest-tile__border;
      }
    }
  }
}

.contest-tile__status-indicator {
  width: 100%;
  border-bottom: $contest-tile__border;
  display: flex;
  @include breakpoint("m") {
    width: auto;
    border-bottom: 0;
  }
}

.contest-tile__status-indicator-text {
  display: flex;
  align-items: center;
  align-self: center;
  padding: $spacing__s $spacing__m;
  &:before {
    content: "";
    display: inline-block;
    width: 8px;
    height: 8px;
    border-radius: 50%;
    margin-right: $spacing__s;
    background: $color__white;
  }
}

.contest-tile__status-indicator-text--active {
  color: $color__white;
  &:before {
    background: $color__green;
  }
}

.contest-tile__status-indicator-text--soon {
  color: $color__white;
}

.contest-tile__status-indicator-text--completed {
  &:before {
    display: none;
  }
}

// Theme: Solid (contest page)
// --------------------------------------------------

@mixin contest-tile--solid {
  background: $contest-tile--solid__background;
  border: $contest-tile--solid__border;
  .contest-tile__button-wrapper {
    .contest-tile__amount {
      background: none;
      border-bottom: $contest-tile--solid__border !important;
    }
    a {
      border-left: $contest-tile--solid__border !important;
    }
  }

  .contest-tile__bottom {
    border-top: $contest-tile--solid__border;
  }

  .contest-tile__countdown {
    border-left: $contest-tile--solid__border;

    .countdown {
      background: $color__n-80;
    }
  }
}

// Theme: Reduced
// --------------------------------------------------

// [Tip] This is needed on the swiper parent container
//  .swiper-slide
//    display: flex
//    height: auto

.reduced {
  &.contest-tile {
    margin-bottom: $spacing__m;
    justify-content: space-between;
    width: 100%;
  }
  .contest-tile__top {
    display: flex;
    flex-direction: column-reverse;
    padding: 0;
  }
  .contest-tile__amount {
    padding: $spacing__s $spacing__m;
    border-bottom: $contest-tile--solid__border;
    color: $color__white;
    font-weight: 500;
    text-align: right;
    font-size: $headline-font-size__xxs;
  }

  // Logo area
  // --------------------

  .contest-tile__logo {
    width: calc($contest-tile__logo-container-width * 0.7);
    margin-right: $spacing__m;
  }

  .contest-tile__logo .project-link {
    width: calc($contest-tile__logo-container-width * 0.7);
  }

  // Content area
  // --------------------

  .contest-tile__content {
    display: flex;
    padding: $spacing__m;
  }

  // Contest title
  // --------------------

  .contest-tile__title {
    font-size: $headline-font-size__xxs;
  }

  // Contest time
  // --------------------

  .contest-tile__time-wrapper {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    margin-top: $spacing__s;
  }

  .contest-tile__days-duration {
    margin-right: $spacing__s;

    &::after {
      content: "";
    }
  }

  // Contest buttons and live indicator
  // --------------------

  .contest-tile__bottom {
    // flex-direction: column;
    justify-content: space-between;
  }

  .contest-tile__button-wrapper {
    width: 100%;
    height: 100%;
    justify-content: flex-end;
    align-content: center;

    display: flex;
    align-items: center;

    a {
      width: auto;
      height: 100%;
      padding: $spacing__s $spacing__m;
      display: flex;
      align-items: center;

      color: $color__white;
      text-align: center;
      border-left: $contest-tile__border;

      &:hover {
        background: rgba($color__white, 0.1);
      }
      &:first-of-type {
        border-left: $contest-tile__border;
      }
    }
  }

  .contest-tile__status-indicator {
    width: 100%;
    border-color: $color__n-60 !important;
  }

  .contest-tile__status-indicator-text {
    font-size: $font-size__small;
  }

  @include contest-tile--solid;
}

